remove legacy message color support fix lang formatting update dependencies